bug squashed 😮‍💨

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,20 @@
-@import url('http://fonts.cdnfonts.com/css/cubano');
 *,
 *::after,
 *::before {
     box-sizing: border-box;
-    font-family: 'Cubano', sans-serif;
+    font-family: 'Lilita One', sans-serif;
+    font-weight: 800;
+    font-display: fallback;
 }
 
 .ssvg {
     color: #000;
     box-shadow: 0.3px 0px 10px #fff;
     fill: rgb(255, 0, 0);
+}
+
+.modal {
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -45,7 +50,7 @@ body {
     border-radius: .25em;
     cursor: pointer;
     user-select: none;
-    text-shadow: 0.3px 0px 15px rgb(0, 3, 0);
+    text-shadow: 0.000056px 0px 20px rgb(0, 3, 0);
 }
 
 .key.large {
